Fix header on mobile

--- a/style.css
+++ b/style.css
@@ -60,11 +60,9 @@ header {
     color: white;
     font-size: 22px;
     padding: 10px;
+    width: 100%;
 }
 
-/* #header {
-    padding: 10px;
-} */
 
 .info-container {
     display: flex;
